discussion/kv_engine/138555/138555_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Optimize McdTestappTest/MB_10114 under TSan

This test runs very slowly on Linux TSan - the repeated appending of
100KB to the document value and associated send / recv results in
around 30s runtime.

Increase the increment each time to 1MB - this reduces the number of
iterations and runtime down to ~5s

Change-Id: I87fc2157c83ef0717378b627c6cb4ed5d0cd2ecb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-10-20 16:36:26.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-20 17:30:43.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5196/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_tests.cc:537:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    char value[1000000] = {0};
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5196/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31265/ : FAILURE

Failure of GoogleTest "FullAndValueEvictionOnReplicaAndPending/RollbackTest.RollbackToMiddleOfAPersistedSnapshot/couchdb_value_only_pending":

<pre>
[ RUN      ] FullAndValueEvictionOnReplicaAndPending/RollbackTest.RollbackToMiddleOfAPersistedSnapshot/couchdb_value_only_pending
..\kv_engine\engines\ep\tests\module_tests\evp_store_rollback_test.cc(491): error: Expected equality of these values:
  htState.dump(0)
    Which is: "[\n{\n\"cas\": 1603212698121994242,\n\"committed\": 0,\n\"deleted\": false,\n\"flags\": 0,\n\"key\": \"cid:0xc:key7, size:5\",\n\"l/e/d/c time\": 0,\n\"ordered\": false,\n\"resident\": true,\n\"rev\": 1,\n\"seqno\": 4\n},\n{\n\"cas\": 1603212698118848512,\n\"committed\": 0,\n\"deleted\": false,\n\"flags\": 0,\n\"key\": \"cid:0x0:dummy1, size:7\",\n\"l/e/d/c time\": 0,\n\"ordered\": false,\n\"resident\": true,\n\"rev\": 1,\n\"seqno\": 1\n}\n]"
  getHtState().dump(0)
    Which is: "[]"
With diff:
@@ -1,26 +1,1 @@
-[
-{
-\"cas\": 1603212698121994242,
-\"committed\": 0,
-\"deleted\": false,
-\"flags\": 0,
-\"key\": \"cid:0xc:key7, size:5\",
-\"l/e/d/c time\": 0,
-\"ordered\": false,
-\"resident\": true,
-\"rev\": 1,
-\"seqno\": 4
-},
-{
-\"cas\": 1603212698118848512,
-\"committed\": 0,
-\"deleted\": false,
-\"flags\": 0,
-\"key\": \"cid:0x0:dummy1, size:7\",
-\"l/e/d/c time\": 0,
-\"ordered\": false,
-\"resident\": true,
-\"rev\": 1,
-\"seqno\": 1
-}
-]
+[]

..\kv_engine\engines\ep\tests\module_tests\evp_store_rollback_test.cc(536): error: Expected equality of these values:
  ENGINE_SUCCESS
    Which is: 0
  result.getStatus()
    Which is: 22
Failed to find key7
..\kv_engine\engines\ep\tests\module_tests\evp_store_rollback_test.cc(540): error: Expected equality of these values:
  rollback_item.getBySeqno()
    Which is: 4
  store->getVBucket(vbid)->getHighSeqno()
    Which is: 0
[  FAILED  ] FullAndValueEvictionOnReplicaAndPending/RollbackTest.RollbackToMiddleOfAPersistedSnapshot/couchdb_value_only_pending, where GetParam() = ("couchdb", "value_only", "pending") (15 ms)
FullAndValueEvictionOnReplicaAndPending/RollbackTest.RollbackToMiddleOfAPersistedSnapshot/couchdb_value_only_pending
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31265/ )

Failure of a CTest test 232/393 Test #183: ep-engine_ep_unit_tests.FullAndValueEvictionOnReplicaAndPending/RollbackTest .................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31265/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6526/ : FAILURE

Failure of a CTest test [2020-10-20T17:17:03.151Z] 298/397 Test  #83: ep-engine_ep_unit_tests.ExecutorPoolEpEngineTest/FollyExecutorPool .......................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6526/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14449/ : FAILURE

AddressSanitizer issue: odr-violation: global "cb_new_hook" at ../platform/src/cb_malloc_arena.cc:30:22 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14449/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3725/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26994/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6646/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5599/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6806/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
